package com.salfit.model;

public class Czlonek {
}
