package com.salfit.model;

public class Sala {
}
