package com.salfit.model;

public enum StatusKarnetu {
}
