package com.salfit.model;

public enum StatusSali {
}
