package com.salfit.model;

public class Zajecia {
}
